@@ -1,3 +1,9 @@
+2011-01-25  Rik  <octave@nomad.inbox5.com>
+
+	* DLD-FUNCTIONS/fft.cc, DLD-FUNCTIONS/fft2.cc, DLD-FUNCTIONS/fftn.cc,
+	load-save.cc: Make docstrings static by removing documentation
+	depending on #ifdef configuration variables.
+
 2011-01-25  Konstantinos Poulios  <logari81@googlemail.com>
 
 	* src/graphics.cc (text::properties::update_text_extent):
